# SessionPilot

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
session_pilot/: __init__.py  analyzer.py  browser.py  cleaner.py  cli.py  exporter.py  indexer.py  models.py  reporter.py  scanner.py  searcher.py  utils.py
tests/: test_session_pilot.py
